--- a/app/client/views/index.html
+++ b/app/client/views/index.html
@@ -5,7 +5,6 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="/socket.io/socket.io.js"></script>
-  <script src="bower_components/angular/angular.min.js"></script>
 </head>
 <body ng-app="chatApp">
 
@@ -102,15 +101,8 @@
 
   </div>
 
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="bower_components/angular-scroll-glue/src/scrollglue.js"></script>
-  <script src="bower_components/angular-socket-io/socket.min.js"></script>
+  <script src="js/libs.min.js"></script>
   <script src="js/app.min.js"></script>
-  <!-- <script src="js/controllers/SocketController.js"></script> -->
-  <!-- <script src="js/controllers/UserController.js"></script> -->
-  
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 </html>
